# command-line-rust

./: README.md
catr/src/: lib.rs
cutr/: Cargo.toml
cutr/src/: main.rs
echor/src/: main.rs
echor/tests/: cli.rs
findr/: Cargo.toml
findr/src/: lib.rs
headr/: Cargo.toml  mk-outs.sh
headr/src/: lib.rs
headr/tests/: cli.rs
headr/tests/expected/: all.n-1.out  all.n-10.out  two.txt.n-1.out
uniqr/: Cargo.toml
uniqr/src/: lib.rs
wcr/: Cargo.toml
wcr/src/: lib.rs
