[package]
name = "uniqr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4"
anyhow = "1.0.79"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1.4.0"
rand = "0.8"
tempfile = "3"
